# gennaker-tools

./: .copier-answers.yml  .gitignore  .prettierignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  eslint.config.mjs  flake.nix  install.json  jupyter_server_config.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  renovate.json5  test_nb.ipynb  tsconfig.json
.github/workflows/: build.yml  check-release.yml  prep-release.yml  publish-release.yml
gennaker_tools/: __init__.py  handlers.py  settings_sync_extension.py  toml_sync_extension.py
jupyter-config/jupyter_server_config.d/: gennaker_tools.json  toml-sync.json
jupyterlab_stateless_run/: __init__.py
schema/: gennaker-tools.json  plugin.json  save-as.json  snippets.json  stateless-run.json  toml-sync.json  watch-disk.json
src/: index.ts  reload.ts  saveAs.ts  settingsChanged.ts  snippets.ts  statelessRun.ts  tokens.ts  tomlSync.ts  watchDisk.ts
